parser/parser.output

state 0
	$accept: .start $end 
	top_statement_list: .    (3)

	.  reduce 3 (src line 269)

	start  goto 1
	top_statement_list  goto 2

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  top_statement_list.    (1)
	top_statement_list:  top_statement_list.top_statement 

	T_ECHO  shift 5
	.  reduce 1 (src line 234)

	top_statement  goto 3
	statement  goto 4

state 3
	top_statement_list:  top_statement_list top_statement.    (2)

	.  reduce 2 (src line 267)


state 4
	top_statement:  statement.    (4)

	.  reduce 4 (src line 285)


state 5
	statement:  T_ECHO.echo_expr_list ';' 

	T_LNUMBER  shift 15
	T_DNUMBER  shift 16
	T_VARIABLE  shift 27
	T_LINE  shift 17
	T_FILE  shift 18
	T_DIR  shift 19
	T_CLASS_C  shift 24
	T_TRAIT_C  shift 20
	T_METHOD_C  shift 21
	T_FUNC_C  shift 22
	T_NS_C  shift 23
	T_START_HEREDOC  shift 25
	'"'  shift 26
	'('  shift 29
	'$'  shift 28
	.  error

	expr  goto 8
	variable  goto 9
	expr_without_variable  goto 10
	echo_expr  goto 7
	simple_variable  goto 13
	scalar  goto 12
	dereferencable  goto 14
	callable_variable  goto 11
	echo_expr_list  goto 6

state 6
	statement:  T_ECHO echo_expr_list.';' 
	echo_expr_list:  echo_expr_list.',' echo_expr 

	','  shift 31
	';'  shift 30
	.  error


state 7
	echo_expr_list:  echo_expr.    (7)

	.  reduce 7 (src line 817)


state 8
	echo_expr:  expr.    (8)

	.  reduce 8 (src line 819)


state 9
	expr:  variable.    (24)
	dereferencable:  variable.    (28)

	'['  reduce 28 (src line 1096)
	.  reduce 24 (src line 1080)


state 10
	expr:  expr_without_variable.    (25)

	.  reduce 25 (src line 1082)


state 11
	variable:  callable_variable.    (32)

	.  reduce 32 (src line 1124)


state 12
	expr_without_variable:  scalar.    (9)

	.  reduce 9 (src line 851)


state 13
	callable_variable:  simple_variable.    (30)

	.  reduce 30 (src line 1110)


state 14
	callable_variable:  dereferencable.'[' optional_expr ']' 

	'['  shift 32
	.  error


state 15
	scalar:  T_LNUMBER.    (10)

	.  reduce 10 (src line 1052)


state 16
	scalar:  T_DNUMBER.    (11)

	.  reduce 11 (src line 1054)


state 17
	scalar:  T_LINE.    (12)

	.  reduce 12 (src line 1055)


state 18
	scalar:  T_FILE.    (13)

	.  reduce 13 (src line 1056)


state 19
	scalar:  T_DIR.    (14)

	.  reduce 14 (src line 1057)


state 20
	scalar:  T_TRAIT_C.    (15)

	.  reduce 15 (src line 1058)


state 21
	scalar:  T_METHOD_C.    (16)

	.  reduce 16 (src line 1059)


state 22
	scalar:  T_FUNC_C.    (17)

	.  reduce 17 (src line 1060)


state 23
	scalar:  T_NS_C.    (18)

	.  reduce 18 (src line 1061)


state 24
	scalar:  T_CLASS_C.    (19)

	.  reduce 19 (src line 1062)


state 25
	scalar:  T_START_HEREDOC.T_ENCAPSED_AND_WHITESPACE T_END_HEREDOC 
	scalar:  T_START_HEREDOC.T_END_HEREDOC 
	scalar:  T_START_HEREDOC.encaps_list T_END_HEREDOC 

	T_VARIABLE  shift 37
	T_ENCAPSED_AND_WHITESPACE  shift 33
	T_END_HEREDOC  shift 34
	T_DOLLAR_OPEN_CURLY_BRACES  shift 38
	T_CURLY_OPEN  shift 39
	.  error

	encaps_var  goto 36
	encaps_list  goto 35

state 26
	scalar:  '\"'.encaps_list '\"' 

	T_VARIABLE  shift 37
	T_ENCAPSED_AND_WHITESPACE  shift 41
	T_DOLLAR_OPEN_CURLY_BRACES  shift 38
	T_CURLY_OPEN  shift 39
	.  error

	encaps_var  goto 36
	encaps_list  goto 40

state 27
	simple_variable:  T_VARIABLE.    (33)

	.  reduce 33 (src line 1134)


state 28
	simple_variable:  '$'.'{' expr '}' 
	simple_variable:  '$'.simple_variable 

	T_VARIABLE  shift 27
	'$'  shift 28
	'{'  shift 42
	.  error

	simple_variable  goto 43

state 29
	dereferencable:  '('.expr ')' 

	T_LNUMBER  shift 15
	T_DNUMBER  shift 16
	T_VARIABLE  shift 27
	T_LINE  shift 17
	T_FILE  shift 18
	T_DIR  shift 19
	T_CLASS_C  shift 24
	T_TRAIT_C  shift 20
	T_METHOD_C  shift 21
	T_FUNC_C  shift 22
	T_NS_C  shift 23
	T_START_HEREDOC  shift 25
	'"'  shift 26
	'('  shift 29
	'$'  shift 28
	.  error

	expr  goto 44
	variable  goto 9
	expr_without_variable  goto 10
	simple_variable  goto 13
	scalar  goto 12
	dereferencable  goto 14
	callable_variable  goto 11

state 30
	statement:  T_ECHO echo_expr_list ';'.    (5)

	.  reduce 5 (src line 399)


state 31
	echo_expr_list:  echo_expr_list ','.echo_expr 

	T_LNUMBER  shift 15
	T_DNUMBER  shift 16
	T_VARIABLE  shift 27
	T_LINE  shift 17
	T_FILE  shift 18
	T_DIR  shift 19
	T_CLASS_C  shift 24
	T_TRAIT_C  shift 20
	T_METHOD_C  shift 21
	T_FUNC_C  shift 22
	T_NS_C  shift 23
	T_START_HEREDOC  shift 25
	'"'  shift 26
	'('  shift 29
	'$'  shift 28
	.  error

	expr  goto 8
	variable  goto 9
	expr_without_variable  goto 10
	echo_expr  goto 45
	simple_variable  goto 13
	scalar  goto 12
	dereferencable  goto 14
	callable_variable  goto 11

state 32
	callable_variable:  dereferencable '['.optional_expr ']' 
	optional_expr: .    (26)

	T_LNUMBER  shift 15
	T_DNUMBER  shift 16
	T_VARIABLE  shift 27
	T_LINE  shift 17
	T_FILE  shift 18
	T_DIR  shift 19
	T_CLASS_C  shift 24
	T_TRAIT_C  shift 20
	T_METHOD_C  shift 21
	T_FUNC_C  shift 22
	T_NS_C  shift 23
	T_START_HEREDOC  shift 25
	'"'  shift 26
	'('  shift 29
	'$'  shift 28
	.  reduce 26 (src line 1085)

	expr  goto 47
	optional_expr  goto 46
	variable  goto 9
	expr_without_variable  goto 10
	simple_variable  goto 13
	scalar  goto 12
	dereferencable  goto 14
	callable_variable  goto 11

state 33
	scalar:  T_START_HEREDOC T_ENCAPSED_AND_WHITESPACE.T_END_HEREDOC 
	encaps_list:  T_ENCAPSED_AND_WHITESPACE.encaps_var 

	T_VARIABLE  shift 37
	T_END_HEREDOC  shift 48
	T_DOLLAR_OPEN_CURLY_BRACES  shift 38
	T_CURLY_OPEN  shift 39
	.  error

	encaps_var  goto 49

state 34
	scalar:  T_START_HEREDOC T_END_HEREDOC.    (21)

	.  reduce 21 (src line 1064)


state 35
	scalar:  T_START_HEREDOC encaps_list.T_END_HEREDOC 
	encaps_list:  encaps_list.encaps_var 
	encaps_list:  encaps_list.T_ENCAPSED_AND_WHITESPACE 

	T_VARIABLE  shift 37
	T_ENCAPSED_AND_WHITESPACE  shift 52
	T_END_HEREDOC  shift 50
	T_DOLLAR_OPEN_CURLY_BRACES  shift 38
	T_CURLY_OPEN  shift 39
	.  error

	encaps_var  goto 51

state 36
	encaps_list:  encaps_var.    (38)

	.  reduce 38 (src line 1226)


state 37
	encaps_var:  T_VARIABLE.    (40)
	encaps_var:  T_VARIABLE.'[' encaps_var_offset ']' 
	encaps_var:  T_VARIABLE.T_OBJECT_OPERATOR T_STRING 

	'['  shift 53
	T_OBJECT_OPERATOR  shift 54
	.  reduce 40 (src line 1232)


state 38
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES.expr '}' 
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES.T_STRING_VARNAME '}' 
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES.T_STRING_VARNAME '[' expr ']' '}' 

	T_LNUMBER  shift 15
	T_DNUMBER  shift 16
	T_VARIABLE  shift 27
	T_STRING_VARNAME  shift 56
	T_LINE  shift 17
	T_FILE  shift 18
	T_DIR  shift 19
	T_CLASS_C  shift 24
	T_TRAIT_C  shift 20
	T_METHOD_C  shift 21
	T_FUNC_C  shift 22
	T_NS_C  shift 23
	T_START_HEREDOC  shift 25
	'"'  shift 26
	'('  shift 29
	'$'  shift 28
	.  error

	expr  goto 55
	variable  goto 9
	expr_without_variable  goto 10
	simple_variable  goto 13
	scalar  goto 12
	dereferencable  goto 14
	callable_variable  goto 11

state 39
	encaps_var:  T_CURLY_OPEN.variable '}' 

	T_VARIABLE  shift 27
	'('  shift 29
	'$'  shift 28
	.  error

	variable  goto 57
	simple_variable  goto 13
	dereferencable  goto 14
	callable_variable  goto 11

state 40
	scalar:  '\"' encaps_list.'\"' 
	encaps_list:  encaps_list.encaps_var 
	encaps_list:  encaps_list.T_ENCAPSED_AND_WHITESPACE 

	T_VARIABLE  shift 37
	T_ENCAPSED_AND_WHITESPACE  shift 52
	T_DOLLAR_OPEN_CURLY_BRACES  shift 38
	T_CURLY_OPEN  shift 39
	'"'  shift 58
	.  error

	encaps_var  goto 51

state 41
	encaps_list:  T_ENCAPSED_AND_WHITESPACE.encaps_var 

	T_VARIABLE  shift 37
	T_DOLLAR_OPEN_CURLY_BRACES  shift 38
	T_CURLY_OPEN  shift 39
	.  error

	encaps_var  goto 49

state 42
	simple_variable:  '$' '{'.expr '}' 

	T_LNUMBER  shift 15
	T_DNUMBER  shift 16
	T_VARIABLE  shift 27
	T_LINE  shift 17
	T_FILE  shift 18
	T_DIR  shift 19
	T_CLASS_C  shift 24
	T_TRAIT_C  shift 20
	T_METHOD_C  shift 21
	T_FUNC_C  shift 22
	T_NS_C  shift 23
	T_START_HEREDOC  shift 25
	'"'  shift 26
	'('  shift 29
	'$'  shift 28
	.  error

	expr  goto 59
	variable  goto 9
	expr_without_variable  goto 10
	simple_variable  goto 13
	scalar  goto 12
	dereferencable  goto 14
	callable_variable  goto 11

state 43
	simple_variable:  '$' simple_variable.    (35)

	.  reduce 35 (src line 1143)


state 44
	dereferencable:  '(' expr.')' 

	')'  shift 60
	.  error


state 45
	echo_expr_list:  echo_expr_list ',' echo_expr.    (6)

	.  reduce 6 (src line 815)


state 46
	callable_variable:  dereferencable '[' optional_expr.']' 

	']'  shift 61
	.  error


state 47
	optional_expr:  expr.    (27)

	.  reduce 27 (src line 1087)


state 48
	scalar:  T_START_HEREDOC T_ENCAPSED_AND_WHITESPACE T_END_HEREDOC.    (20)

	.  reduce 20 (src line 1063)


state 49
	encaps_list:  T_ENCAPSED_AND_WHITESPACE encaps_var.    (39)

	.  reduce 39 (src line 1228)


state 50
	scalar:  T_START_HEREDOC encaps_list T_END_HEREDOC.    (23)

	.  reduce 23 (src line 1066)


state 51
	encaps_list:  encaps_list encaps_var.    (36)

	.  reduce 36 (src line 1221)


state 52
	encaps_list:  encaps_list T_ENCAPSED_AND_WHITESPACE.    (37)

	.  reduce 37 (src line 1224)


state 53
	encaps_var:  T_VARIABLE '['.encaps_var_offset ']' 

	'-'  shift 65
	T_STRING  shift 63
	T_VARIABLE  shift 66
	T_NUM_STRING  shift 64
	.  error

	encaps_var_offset  goto 62

state 54
	encaps_var:  T_VARIABLE T_OBJECT_OPERATOR.T_STRING 

	T_STRING  shift 67
	.  error


state 55
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES expr.'}' 

	'}'  shift 68
	.  error


state 56
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME.'}' 
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME.'[' expr ']' '}' 

	'['  shift 70
	'}'  shift 69
	.  error


state 57
	dereferencable:  variable.    (28)
	encaps_var:  T_CURLY_OPEN variable.'}' 

	'}'  shift 71
	.  reduce 28 (src line 1096)


state 58
	scalar:  '\"' encaps_list '\"'.    (22)

	.  reduce 22 (src line 1065)


state 59
	simple_variable:  '$' '{' expr.'}' 

	'}'  shift 72
	.  error


state 60
	dereferencable:  '(' expr ')'.    (29)

	.  reduce 29 (src line 1098)


state 61
	callable_variable:  dereferencable '[' optional_expr ']'.    (31)

	.  reduce 31 (src line 1113)


state 62
	encaps_var:  T_VARIABLE '[' encaps_var_offset.']' 

	']'  shift 73
	.  error


state 63
	encaps_var_offset:  T_STRING.    (47)

	.  reduce 47 (src line 1248)


state 64
	encaps_var_offset:  T_NUM_STRING.    (48)

	.  reduce 48 (src line 1250)


state 65
	encaps_var_offset:  '-'.T_NUM_STRING 

	T_NUM_STRING  shift 74
	.  error


state 66
	encaps_var_offset:  T_VARIABLE.    (50)

	.  reduce 50 (src line 1252)


state 67
	encaps_var:  T_VARIABLE T_OBJECT_OPERATOR T_STRING.    (42)

	.  reduce 42 (src line 1237)


state 68
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES expr '}'.    (43)

	.  reduce 43 (src line 1239)


state 69
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME '}'.    (44)

	.  reduce 44 (src line 1241)


state 70
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME '['.expr ']' '}' 

	T_LNUMBER  shift 15
	T_DNUMBER  shift 16
	T_VARIABLE  shift 27
	T_LINE  shift 17
	T_FILE  shift 18
	T_DIR  shift 19
	T_CLASS_C  shift 24
	T_TRAIT_C  shift 20
	T_METHOD_C  shift 21
	T_FUNC_C  shift 22
	T_NS_C  shift 23
	T_START_HEREDOC  shift 25
	'"'  shift 26
	'('  shift 29
	'$'  shift 28
	.  error

	expr  goto 75
	variable  goto 9
	expr_without_variable  goto 10
	simple_variable  goto 13
	scalar  goto 12
	dereferencable  goto 14
	callable_variable  goto 11

state 71
	encaps_var:  T_CURLY_OPEN variable '}'.    (46)

	.  reduce 46 (src line 1245)


state 72
	simple_variable:  '$' '{' expr '}'.    (34)

	.  reduce 34 (src line 1136)


state 73
	encaps_var:  T_VARIABLE '[' encaps_var_offset ']'.    (41)

	.  reduce 41 (src line 1235)


state 74
	encaps_var_offset:  '-' T_NUM_STRING.    (49)

	.  reduce 49 (src line 1251)


state 75
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME '[' expr.']' '}' 

	']'  shift 76
	.  error


state 76
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME '[' expr ']'.'}' 

	'}'  shift 77
	.  error


state 77
	encaps_var:  T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME '[' expr ']' '}'.    (45)

	.  reduce 45 (src line 1243)


165 terminals, 18 nonterminals
51 grammar rules, 78/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
67 working sets used
memory: parser 78/120000
34 extra closures
160 shift entries, 2 exceptions
30 goto entries
41 entries saved by goto default
Optimizer space used: output 184/120000
184 table entries, 69 zero
maximum spread: 165, maximum offset: 165
